--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
@@ -22,5 +21,14 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vladbakanov/pulse.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vladbakanov/pulse/issues"
+  },
+  "homepage": "https://github.com/vladbakanov/pulse#readme",
+  "description": ""
 }
