--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 /node_modules
+/src/js/digitalBush-jquery.maskedinput-9672630
+/src/js/jquery-validation-1.19.2
+
 
 # testing
 /coverage
